@@ -51,6 +51,11 @@ uint16 crc16(uint8 const * data_p, uint32 const _length){
     return crc;
 }
 
+enum CRC16EncapCmd
+{
+	CRC16EncapCmd_Encap = 0x01
+};
+
 
 //-----------------------------------------------------------------------------
 // <CRC16Encap::HandleMsg>
@@ -70,22 +75,22 @@ bool CRC16Encap::HandleMsg
 		uint16 crcM = (_data[_length - 3] << 8) + _data[_length - 2] ; // crc as reported in msg
 		uint16 crcC = crc16(&_data[0], _length - 3 );				   // crc calculated
 
-		if ( crcM != crcC ) 
+		if ( crcM != crcC )
 		{
 			Log::Write( LogLevel_Info, GetNodeId(), "CRC check failed, message contains 0x%.4x but should be 0x%.4x", crcM, crcC);
 			return false;
 		}
-		
+
 		if( Node const* node = GetNodeUnsafe() )
 		{
 			uint8 commandClassId = _data[1];
-			
+
 			if( CommandClass* pCommandClass = node->GetCommandClass( commandClassId ) )
 			{
 				pCommandClass->HandleMsg( &_data[2], _length - 4 );
 			}
 		}
-		
+
 		return true;
 	}
 	return false;
